--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,5 @@ include LICENSE
 include README.md
 include src/C/cvxopt.h
 include src/C/blas_redefines.h
-recursive-include examples/*
+recursive-include examples *
 recursive-include doc/build/html *
-excluse .DS_Store 
