--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include LICENSE
 include README.md
 include src/C/cvxopt.h
 include src/C/blas_redefines.h
+include src/C/chompack.h
 recursive-include examples *
 recursive-include doc/build/html *
