--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ before_install:
   - sudo apt-get install libblas-dev
   - sudo apt-get install liblapack-dev
   - sudo apt-get install libatlas-dev
-
+  - sudo apt-get install libsuitesparse-dev
+  
 language: python
 python:
   - "2.7"
@@ -13,6 +14,9 @@ python:
   - "3.5"
 
 # command to run tests
+env:  
+  - CVXOPT_SUITESPARSE_EXT_LIB=1
+
 install:
   - pip install cvxopt
   - python setup.py -q install
