--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ python:
 # command to run tests
 env:  
   - CVXOPT_SUITESPARSE_EXT_LIB=1
-
+  - CVXOPT_SUITESPARSE_INC_DIR=/usr/include/suitesparse/
+  
 install:
   - pip install cvxopt
   - python setup.py -q install
