--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,12 @@ python:
   - "3.4"
   - "3.5"
 
-# command to run tests
 env:  
   - CVXOPT_SUITESPARSE_EXT_LIB=1
   - CVXOPT_SUITESPARSE_INC_DIR=/usr/include/suitesparse/
   
 install:
-  - pip install cvxopt
+  - pip install git+https://github.com/cvxopt/cvxopt/tree/dev
   - python setup.py -q install
 
 script: nosetests
