--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ python:
   - "3.5"
 
 env:  
-  - CVXOPT_SUITESPARSE_EXT_LIB=1
-  - CVXOPT_SUITESPARSE_INC_DIR=/usr/include/suitesparse/
+  - CVXOPT_SUITESPARSE_EXT_LIB=1 CVXOPT_SUITESPARSE_INC_DIR=/usr/include/suitesparse/
   
 install:
   - pip install https://github.com/cvxopt/cvxopt/tree/dev
