--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
   - CVXOPT_SUITESPARSE_EXT_LIB=1 CVXOPT_SUITESPARSE_INC_DIR=/usr/include/suitesparse/
   
 install:
-  - pip install https://github.com/cvxopt/cvxopt/tree/dev
+  - pip install git+https://github.com/cvxopt/cvxopt@dev
   - python setup.py -q install
 
 script: nosetests
