--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,10 @@ python:
 - '2.7'
 - '3.5'
 install:
+- pip install coveralls
 - pip install git+https://github.com/cvxopt/cvxopt@dev
 - python setup.py -q install
-script: nosetests
+script: nosetests --with-coverage
 after_success:
   - coveralls
 deploy:
