--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 - pip install coveralls
 - pip install git+https://github.com/cvxopt/cvxopt@dev
 - python setup.py -q install
-script: nosetests --with-coverage
+script: nosetests --with-coverage --cover-package=chompack
 after_success:
   - coveralls
 deploy:
