--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,6 @@ include src/C/blas_redefines.h
 include src/C/chompack.h
 recursive-include examples *
 recursive-include tests *
-recursive-include doc/build/html *
+recursive-include doc/build/html *include versioneer.py
+include src/python/_version.py
+include versioneer.py
