--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [metadata]
 description-file = README.md
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/python/_version.py
+versionfile_build = chompack/_version.py
+tag_prefix = v
+parentdir_prefix =
