--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ os:
 - linux
 before_install:
 - sudo apt-get install python-dev
-- sudo apt-get install libblas-dev
-- sudo apt-get install liblapack-dev
-- sudo apt-get install libatlas-dev
+- sudo apt-get install libopenblas-dev
+- wget http://faculty.cse.tamu.edu/davis/SuiteSparse/SuiteSparse-4.5.3.tar.gz
+- echo '2403007be38266e3607edfbf3833bee7f6bcb0f1  SuiteSparse-4.5.3.tar.gz' | shasum -c -
+- if [ $? -eq 0 ]; then tar -xf SuiteSparse-4.5.3.tar.gz; CVXOPT_SUITESPARSE_SRC_DIR=$(pwd)/SuiteSparse pip install cvxopt; fi
 language: python
 python:
 - '2.7'
 - '3.5'
 install:
 - pip install coveralls
-- pip install git+https://github.com/cvxopt/cvxopt@dev
 - python setup.py -q install
 script: nosetests --with-coverage --cover-package=chompack
 after_success:
